# EfiSharp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  Directory.Build.targets  Directory.build.targets  EFISharp.sln  EfiExe.Build.props  EfiSharp.sln  LICENSE  LaunchDebugger.vbs  README.md  brokenclasses.txt  build.bat  efisharp.sln  readkeyprogress.txt  v6 support.txt
EFISharp.CoreLib/: EFISharp.CoreLib.csproj  EfiSharp.CoreLib.csproj.DotSettings
EfiSharp/: Class1.cs  EfiSharp.csproj  Properties.txt  build.bat
EfiSharp.Console/: Console.cs  EfiSharp.Console.csproj
EfiSharp.CoreLib/: EfiSharp.CoreLib.csproj
EfiSharp.Native/: CMakeLists.txt  EFiSharp.Native.vcxproj  EFiSharp.Native.vcxproj.filters  EfiSharp.Native.vcxproj  EfiSharp.Native.vcxproj.filters
EfiSharp.Native/Runtime/: CachedInterfaceDispatch.cpp  CachedInterfaceDispatch.h  CommonMacros.h  MathHelpers.cpp  rhassert.h
EfiSharp.Native/Runtime/amd64/: AsmMacros.inc  StubDispatch.asm  UniversalTransition.asm
EfiSharp.Native/Runtime/inc/: TargetPtrs.h  daccess.h  rhbinder.h  type_traits.hpp
EfiSharp.Native/Runtime/uefi/: PalRedhawkInline.h
EfiSharp.Native/Runtime/unix/: no_sal2.h
EfiSharp.libc/: EfiSharp.libc.vcxproj  EfiSharp.libc.vcxproj.filters
FloatWriteDebug/: FloatWriteDebug.sln
Licenses/: C-Marco-Collections LICENSE  RoseOS License  dotnet LICENSE.TXT  mlibc LICENSE
System.Private.CoreLib.NativeAOT.Shared/: System.Private.CoreLib.NativeAOT.Shared.projitems  System.Private.CoreLib.NativeAOT.Shared.shproj
corertBuild/: BuildVersion-20201024.props
(+321 files in other folders)
